--- a/Vancouver_Crimes.ipynb
+++ b/Vancouver_Crimes.ipynb
@@ -13,13 +13,15 @@
     "1. Analyze spatial distribution of theft incidents\n",
     "2. Identify temporal patterns and peak times\n",
     "3. Develop predictive models for risk assessment\n",
-    "4. Generate actionable insights for safety strategies"
+    "4. Generate actionable insights for safety strategies\n",
+    "5. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Import required libraries\n",
     "import pandas as pd\n",
@@ -48,6 +50,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load and prepare data\n",
     "def load_theft_data():\n",
@@ -71,6 +74,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Data preprocessing\n",
     "def preprocess_data(df):\n",
@@ -106,6 +110,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Basic statistics and data quality check\n",
     "def explore_data_quality(df):\n",
